devops/k8s/activemq.yml
apiVersion: v1
kind: Service
metadata:
  name: activemq
  labels:
    app: activemq
spec:
  ports:
  - port: 61616
    name: jms
  selector:
    app: activemq
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: activemq
  labels:
    app: activemq
spec:
  selector:
    matchLabels:
      app: activemq
  serviceName: activemq
  template:
    metadata:
      labels:
        app: activemq
    spec:
      imagePullSecrets:
      - name: regcred
      nodeSelector:
        kubernetes.io/hostname: w01.k8s.swahome.net
      containers:
      - name: activemq
        image: dregistry.swahome.net:7443/research/devops/activemq:5.15.4
        ports:
        - containerPort: 61616
          name: jms
        - containerPort: 8161
          name: ui
        volumeMounts:
        - name: activemq-data-local-storage
          mountPath: /opt/activemq/data
      volumes:
      - name: activemq-data-local-storage
        hostPath:
          path: /var/local/storage/activemq/data
          type: DirectoryOrCreate
