devops/k8s/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  selector:
    app: postgres
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres"
  template:
    metadata:
      labels:
        app: postgres
    spec:
      imagePullSecrets:
      - name: regcred
      nodeSelector:
        kubernetes.io/hostname: w01.k8s.swahome.net
      containers:
      - name: postgres
        image: dregistry.swahome.net:7443/research/devops/postgres:10.4
        command: ["/docker-entrypoint.sh","-c","logging_collector=on","-c","log_destination=stderr","-c","log_directory=/var/log/postgresql"]
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-data-local-storage
          mountPath: /var/lib/postgresql/data
        - name: postgres-log-local-storage
          mountPath: /var/log/postgresql
        - name: postgres-initdb-volume
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-data-local-storage
        hostPath:
          path: /var/local/storage/postgres/data
          type: DirectoryOrCreate
      - name: postgres-log-local-storage
        hostPath:
          path: /var/local/storage/postgres/log
          type: DirectoryOrCreate
      - name: postgres-initdb-volume
        configMap:
          name: postgres-init-files
